migration to fix bookings user and project references. fixed card component spacing. fixed merge issue on projects controller.

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,11 +6,12 @@
   display: flex;
   border-radius: 12px;
   position: relative;
+  flex-grow: 1;
 }
 
 .card-project .project-image {
   height: 100%;
-  width: 200px;
+  width: 300px;
   object-fit: cover;
   border-bottom-left-radius: 12px;
   border-top-left-radius: 12px;
